@@ -1,3 +1,10 @@
+2006-12-18 Jens Tkotz <jens@peino.de> 1.5.6-svn-b1
+
+ * Fix: Bug #1608264
+	After logging in, the userlanguage was not set.
+
+ * Change: Move the session init before the language init in init.php
+
 2006-12-07 Chris Kelly <ckdake@ckdake.com> 1.5.5-pl2-svn-b1
 
  * Fix: svn keywords were missing on some files which broke
